--- a/Blog.Web/angular/app/modules/backoffice/components/editpost/editpost.component.html
+++ b/Blog.Web/angular/app/modules/backoffice/components/editpost/editpost.component.html
@@ -1,3 +1,7 @@
+<mat-form-field>
+  <input type="text" matInput [(ngModel)]="flushKey" placeholder="Flush cache">
+  <button (click)="flushCacheForKey()">Flush</button>
+</mat-form-field>
 <table cellspacing="20">
   <tr>
     <td>
