--- a/Blog.Web/angular/app/modules/shared/components/post-preview/post-preview.component.html
+++ b/Blog.Web/angular/app/modules/shared/components/post-preview/post-preview.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <div mat-card-image [style.background-image]="'url('+this.post.category.imageUrl+')'" alt="?">
+  <div mat-card-image [style.backgroundImage]="'url('+this.post.category.imageUrl+')'" alt="?">
     <h1>
         <a [routerLink]="['/posts/', post.category.code, post.url]">{{post.title}}</a>
     </h1>
