--- a/Blog.Web/angular/app/modules/backoffice/components/editpost/editpost.component.html
+++ b/Blog.Web/angular/app/modules/backoffice/components/editpost/editpost.component.html
@@ -1,7 +1,3 @@
-<mat-form-field>
-  <input type="text" matInput [(ngModel)]="flushKey" placeholder="Flush cache">
-  <button (click)="flushCacheForKey()">Flush</button>
-</mat-form-field>
 <table cellspacing="20">
   <tr>
     <td>
@@ -36,10 +32,24 @@
     </td>
   </tr>
 </table>
-<mat-form-field class="desc">
-  <textarea [(ngModel)]="description" matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
-    cols="20"></textarea>
-</mat-form-field>
+<table cellspacing="0">
+  <tr>
+    <td>
+      <mat-form-field class="desc">
+        <textarea [(ngModel)]="description" matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
+          cols="20"></textarea>
+      </mat-form-field>
+    </td>
+  </tr>
+  <tr >
+    <td style="position:relative">
+      <mat-form-field>
+        <input type="text" matInput [(ngModel)]="flushKey" placeholder="Flush cache">
+      </mat-form-field>
+      <button class="flush" (click)="flushCacheForKey()">Flush</button>
+    </td>
+  </tr>
+</table>
 <button mat-fab color="accent" (click)="submit()">
   <mat-icon aria-label="">check</mat-icon>
 </button>
