fix: cleanup imports

--- a/Blog.Web/angular/app/app.component.scss
+++ b/Blog.Web/angular/app/app.component.scss
@@ -1,5 +1,5 @@
 html {
-    background: #e9ebec;
+    background: url(https://sebastienollivier.fr/images/bg-pattern.png);
     body {
         margin: 0;
         display: flex;
