fix : mat-fab ssr

--- a/Blog.Web/angular/app/containers/post/post.component.html
+++ b/Blog.Web/angular/app/containers/post/post.component.html
@@ -6,7 +6,7 @@
         <h1>
           {{post.title}}
         </h1>
-        <a mat-fab color="accent" [routerLink]="''">
+        <a mat-fab color="accent" class="mat-fab" [routerLink]="''">
           <mat-icon  aria-label="Example icon-button with a heart icon">arrow_back</mat-icon>
         </a>
       </div>
