ajout d'un google analytics

--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -10,4 +10,11 @@
     <script type="text/javascript" asp-append-version="true" src="~/inline.bundle.js"></script>
     <script type="text/javascript" asp-append-version="true" src="~/polyfills.bundle.js"></script>
     <script type="text/javascript" asp-append-version="true" src="~/main.bundle.js"></script>
+    <!-- ga -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-115641157-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
 }
