feat(ng6): migration

--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -3,13 +3,13 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/themes/prism-okaidia.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link href="~/styles.bundle.css" asp-append-version="true" rel="stylesheet">
+<link href="~/styles.css" asp-append-version="true" rel="stylesheet">
 
 @section scripts {
     <!-- Our webpack bundle -->
-    <script type="text/javascript" asp-append-version="true" src="~/inline.bundle.js"></script>
-    <script type="text/javascript" asp-append-version="true" src="~/polyfills.bundle.js"></script>
-    <script type="text/javascript" asp-append-version="true" src="~/main.bundle.js"></script>
+    <script type="text/javascript" asp-append-version="true" src="~/runtime.js"></script>
+    <script type="text/javascript" asp-append-version="true" src="~/polyfills.js"></script>
+    <script type="text/javascript" asp-append-version="true" src="~/main.js"></script>
     <!-- ga -->
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
