feat(header): add social link

--- a/Blog.Web/angular/app/components/header/header.component.scss
+++ b/Blog.Web/angular/app/components/header/header.component.scss
@@ -72,6 +72,10 @@ mat-card {
                 background: url("https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-64.png");
                 background-size: cover;
             }
+            .mvp-image{
+              background-image: url("https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/10606114_10152351924332844_5646824835908083548_n.png?_nc_cat=0&oh=34da476bbc7c4d279b202a54c6ec54e8&oe=5BBF80D0");
+              background-size: cover;
+            }
         }
     }
 }
