--- a/Blog.Web/angular/styles.scss
+++ b/Blog.Web/angular/styles.scss
@@ -1,1 +1,30 @@
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+mat-card {
+  margin: 20px auto;
+  max-width: 900px;
+  @media (max-width: 950px) {
+      margin: 0 auto;
+  }
+  .mat-card-content,
+  .mat-card-header .mat-card-title,
+  .mat-card-subtitle {
+      font-size: 17px;
+  }
+  [mat-card-image] {
+      height: 200px;
+      background-position: center;
+      background-size: cover;
+      position: relative;
+      h1 {
+          font-size: 24px;
+          font-weight: 400;
+          margin: 0;
+          text-shadow: 1px 1px 8px #444;
+          color: white;
+          position: absolute;
+          bottom: 15px;
+          left: 15px;
+      }
+  }
+}
