--- a/Blog.Web/angular/app/app.component.scss
+++ b/Blog.Web/angular/app/app.component.scss
@@ -18,7 +18,7 @@ html {
         }
 
         .avatar-image {
-            background: url("https://avatars2.githubusercontent.com/u/10477902");
+            background: url("https://avatars2.githubusercontent.com/u/10477902?s=40");
             background-size: cover;
         }
         app-post {
