chore(logo): update mvp logo

--- a/Blog.Web/angular/app/components/header/header.component.scss
+++ b/Blog.Web/angular/app/components/header/header.component.scss
@@ -73,7 +73,7 @@ mat-card {
                 background-size: cover;
             }
             .mvp-image{
-              background-image: url("https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/10606114_10152351924332844_5646824835908083548_n.png?_nc_cat=0&oh=34da476bbc7c4d279b202a54c6ec54e8&oe=5BBF80D0");
+              background-image: url("https://i1.social.s-msft.com/profile/u/avatar.jpg?displayname=MVP+Award+Program&size=extralarge&version=a4e26a05-d4ed-4cef-b2ae-850436b1ed7f");
               background-size: cover;
             }
         }
