--- a/Blog.Web/angular/app/containers/home/home.component.scss
+++ b/Blog.Web/angular/app/containers/home/home.component.scss
@@ -18,3 +18,10 @@ app-post-preview {
       color: rgba(0,0,0,.54);
     }
 }
+:host{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
